test: add unit tests for controllers and services and implement initial frontend layout and components